# novel_platfrom

./: .gitignore
ice-workbench/backend/: alembic.ini  pyproject.toml
ice-workbench/backend/app/: __init__.py  main.py
ice-workbench/backend/app/core/: aegis.py  config.py  deps.py  errors.py  security.py
ice-workbench/backend/app/schemas/: auth.py  file.py  notification.py  task.py
ice-workbench/backend/app/seed/: runner.py
ice-workbench/backend/app/services/: admin_svc.py  agent_snapshot_svc.py  agents_svc.py  auth_svc.py  conversation_svc.py  experience_card_svc.py  feishu.py  feishu_import_svc.py  file_svc.py  join_request_svc.py  kb_svc.py  llm_gateway.py  notification_svc.py  public_task_svc.py  scheduler_svc.py  skill_svc.py  sql_audit_svc.py  sysconfig_svc.py  task_svc.py  template_svc.py  tool_runner.py  usage_svc.py
ice-workbench/backend/scripts/: rebuild_index.py
ice-workbench/backend/tests/: conftest.py  test_aegis.py  test_agent_refresh.py  test_agent_snapshot.py  test_agent_update_flag.py  test_auth.py  test_auth_dual.py  test_build_prompt_modes.py  test_card_immutability.py  test_conversation_api.py  test_conversation_get_by_cid.py  test_conversation_lock.py  test_conversation_svc.py  test_feishu_auto_provision.py  test_feishu_import.py  test_file_api_import.py  test_file_import.py  test_file_refresh.py  test_join_api.py  test_join_request.py  test_legacy_task_compat.py  test_llm_gateway.py  test_read_agent_knowledge.py  test_share_freeze.py  test_skill_catalog.py  test_storage.py  test_task_create_snapshot.py  test_task_role.py  test_tasks.py  test_unshare_thaw.py  test_ws_auth.py
novel_platform/backend/: pyproject.toml
novel_platform/backend/app/: main.py  seed.py
novel_platform/backend/app/api/: admin.py  ai_actions.py  attributes.py  auth.py  branches.py  (+24 more)
(+402 files in other folders)
